--- a/Tukkeendoo/tukkeendoo/src/main/res/values/strings.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Tukkeendoo</string>
+    <string name="loading_please_wait">Loading please wait ...</string>
 </resources>
