--- a/Tukkeendoo/tukkeendoo/src/main/res/values/strings.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="navigation_drawer_close">@string/app_name</string>
     <string name="search_a_trip">Search a trip</string>
     <string name="no_internet_connection">No internet connection !</string>
+    <string name="disconnect">Se déconnecter</string>
 </resources>
